# vmaf

libvmaf/include/libvmaf/: libvmaf.rc.h
libvmaf/src/: libvmaf.rc.c  model.c
libvmaf/test/: meson.build
